# pixelateds-psobb-mods

./: .gitignore  CMakeLists.txt  INSTALL.txt  LICENSE  README.md  build.bat  controller_chords.cpp  controller_chords.hpp  entity_class_descriptors.md  entity_cls_table.h  pixelated_mods.cpp  pixelated_mods_hidden.txt  pixelated_mods_monster_hidden.txt  pixelated_mods_rares.txt  pso_addresses.cpp  pso_addresses.hpp  pso_filters.cpp  pso_filters.hpp  pso_log.cpp  pso_log.hpp  pso_sigscan.cpp  pso_sigscan.hpp  vtable_patch.hpp
.github/workflows/: build.yml  release.yml
cosmetic_bundle/: PSOBB_HD.ini  PSOBB_NoEffects.ini  README.md  ReShade.ini
tools/: extract_entity_table.py  rewrite_cls_table.py
